[package]
name = "hub_dashboard"
version = "0.1.0"
edition = "2024"
authors = ["Julian Doppler"]
description = "A Hub that can supply that can process images and supply these to multiple peripheral dashboards"
keywords = ["hub", "dashboard", "bluetooth le"]

[dependencies]
tokio = { version = "1", features = ["full"] }
btleplug = "0.11.8"
image = "0.25.9"
itertools = "0.14.0"
